src/styles/module.less
/* ... */
.fab-component-editor {
  .fab-component-salvage-editor {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    column-gap: 1em;
    margin-bottom: 12px;
    .fab-salvage-option-actual {
      margin-bottom: 10px;
    }
  }
  .fab-no-salvage-opts, .fab-no-salvage-results, .fab-no-salvage-catalysts {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    min-height: 100px;
    font-style: italic;
  }
  .fab-salvage-opts {
    height: 100%;
  }
  .fab-component-name {
    flex-grow: 1;
  }
  .fab-swap-item {
    padding: 16px 8px;
  }
  .fab-component-essences {
    width: 100%;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-row-gap: 1em;
    grid-column-gap: 1em;
    padding: 8px;
    margin-bottom: 10px;
    .fab-no-essence-opts {
      min-width: 460px;
      min-height: 52px;
      text-align: center;
      vertical-align: center;
      font-style: italic;
      grid-area: 2 / 2;
    }
    .fab-component-essence-adjustment {
      display: inline-flex;
      button.fab-increment-essence, button.fab-decrement-essence {
        max-width: 28px;
        i {
          margin: 0;
        }
      }
      .fab-essence-amount {
        width: 100%;
        margin: 0 4px 0 4px;
        border-radius: 4px;
        padding: 4px 8px;
        display: inline-flex;
        justify-content: center;
        .fab-essence-icon {
          margin: 0 8px 0 8px;
        }
      }
    }
  }
  .fab-component-salvage, .fab-salvage-options {
    h3 {
      margin: 10px 0 15px 0;
    }
  }
  .fab-salvage-source {
    max-height: 360px;
    min-height: 100px;
    padding-right: 6px;
    .fab-component {
      cursor: all-scroll;
      img {
        cursor: all-scroll;
      }
    }
    .fab-component-name {
      font-size: var(--font-size-12);
    }
    .fab-component-preview {
      padding: 5px;
    }
  }
  .fab-salvage-search {
    margin-bottom: 6px;
    .fab-label {
      margin-right: 10px;
    }
  }
  .fab-drop-zone.fab-not-salvageable {
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .fab-salvage-editor {
    .fab-tabs{
      min-height: 280px;
    }
    .fab-new-salvage-opt {
      width: 100%;
      margin: 20px;
      padding: 20px;
      display: flex;
      align-items: center;
      justify-content: center;
      min-height: 100%;
    }
  }
  .fab-option-controls {
    .fab-option-name {
      display: flex;
      flex: 3;
      .fab-editable {
        flex-grow: 1;
        margin-left: 10px;
        margin-right: 10px;
      }
    }
    button.fab-delete-salvage-opt {
      flex: 1;
    }
    margin: 10px 0;
  }
  .fab-salvage-option-actual {
    padding-right: 6px;
    overflow-x: hidden;
    .fab-component-preview {
      padding: 5px;
    }
    min-height: 100px;
    max-height: 240px;
  }
}

.fab-component-salvage-app {
  width: 100%;
  .fab-component-salvage-app-body {
    height: 100%;
  }
  .fab-salvage-hint, .fab-catalyst-hint {
    margin: 1em;
  }
}

.fab-item-salvage-header {
  padding: 1em;
  h2 {
    margin: 0;
    flex: 1;
  }
  img {
    width: 64px;
    height: 64px;
    margin-right: 1em;
  }
  button.fab-component-salvage-btn {
    flex: 0;
    justify-self: flex-end;
  }
}

.fab-recipe-crafting-app {
  width: 100%;
  .fab-recipe-crafting-app-body {
    .fab-recipe-crafting-hint {
      grid-column: 1/3;
      grid-row: 1/2;
    }
    height: 100%;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(6, 1fr);
    column-gap: 1em;
    row-gap: 1em;
    .fab-recipe-crafting-ingredients, .fab-recipe-crafting-results {
      grid-row: 2/7;
    }
    .fab-component-grid {
      margin-bottom: 18px;
    }
    h3 {
      margin-bottom: 12px;
    }
  }
  .fab-recipe-crafting-hint {
    margin: 1em;
  }
  .fab-component-grid-carousel-item {
    padding-bottom: 10px;
  }
}

.fab-recipe-crafting-header {
  padding: 1em;
  h2 {
    margin: 0;
    flex: 1;
  }
  img {
    width: 64px;
    height: 64px;
    margin-right: 1em;
  }
  button.fab-recipe-crafting-btn {
    flex: 0;
    justify-self: flex-end;
  }
}

/*
=====================================================================
  BEGIN DND5E2 THEME STYLES
=====================================================================
*/

.dnd5e2 {
  .fab-actor-sheet-header-button {
    .fab-button-text {
      display: none;
    }
  }
}

/*
=====================================================================
  END DND5E2 THEME STYLES
=====================================================================
 */

/*
=====================================================================
  BEGIN FABRICATE CUSTOM WEB FONT STYLES
=====================================================================
*/

@font-face {
  font-family: "fabricate-regular";
  src:  url("/assets/fonts/fabricate-regular.eot?uhkbys");
  src:  url("/assets/fonts/fabricate-regular.eot?uhkbys#iefix") format("embedded-opentype"),
  url("/assets/fonts/fabricate-regular.ttf?uhkbys") format("truetype"),
  url("/assets/fonts/fabricate-regular.woff?uhkbys") format("woff"),
  url("/assets/fonts/fabricate-regular.svg?uhkbys#fabricate-regular") format("svg");
}

[class^="fabricate-icon-"], [class*="fabricate-icon-"] {
  /* use !important to prevent issues with browser extensions that change fonts */
  font-family: "fabricate-regular" !important;
  speak: none;

  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.fabricate-icon-logo:before {
  content: "\e900";
  font-weight: 400;
}
/* ... */

